fixed purple button mobile issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -99,6 +99,7 @@
     height: 5rem;
     padding: 0 5rem;
     color: $color-purple-mid;
+    background-color: white;
     border: 2px solid $color-purple-mid;
     transition: 0.5s all;
     z-index: 100;
